# libtrigonometry

./: CMakeLists.txt  README.md  TrigConfig.cmake
.deb/: README.txt  postinst  prerm
.deb/libtrigonometry/DEBIAN/: postinst
.test-trig/COS&COSEC/: README.md
.test-trig/COS&COSEC/direct-header-call/: CMakeLists.txt  cos.h  cosec.h  test.cpp
.test-trig/COS&COSEC/included_as_a_header/: .build.7z  CMakeLists.txt  main.cpp  text.txt
.test-trig/COT&TAN/: README.md
CRASH/: cos.cpp
CRASH(cos&cosec-tester)/: cos.cpp  cos.h  cosec.h  test.cpp
Release files/: libtrigonometry-1.0.0-Linux.deb
docs/: CODE OF CONDUCT.md  README.md
